<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.minagri.stats</groupId>
    <artifactId>quarkus</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>24</maven.compiler.source>
        <maven.compiler.target>24</maven.compiler.target>

        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
        <lombok.version>1.18.38</lombok.version>

        <quarkus.version>3.24.3</quarkus.version>
        <vaadin.version>24.8.3</vaadin.version>
        <vaadin-maven-plugin.nodeVersion>v22.17.0</vaadin-maven-plugin.nodeVersion>
        <quarkus-execution.development.skip>false</quarkus-execution.development.skip>
        <quarkus-execution.preproduction.skip>false</quarkus-execution.preproduction.skip>
        <quarkus-execution.production.skip>false</quarkus-execution.production.skip>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>vaadin-prereleases</id>
            <url>
                https://maven.vaadin.com/vaadin-prereleases/
            </url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>


    <dependencies>

        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-quarkus-extension</artifactId>
            <version>${vaadin.version}</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-bom</artifactId>
            <version>${quarkus.version}</version>
            <type>pom</type>
            <scope>import</scope>
        </dependency>
        <dependency>
            <groupId>io.quarkus.platform</groupId>
            <artifactId>quarkus-cxf-bom</artifactId>
            <version>${quarkus.version}</version>
            <type>pom</type>
            <scope>import</scope>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-smallrye-health</artifactId>
            <version>3.24.3</version>
        </dependency>

        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest-jackson</artifactId>
            <version>3.24.3</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-hibernate-validator</artifactId>
            <version>3.24.3</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-oidc</artifactId>
            <version>3.24.3</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-micrometer</artifactId>
            <version>3.24.3</version>
        </dependency>
        <dependency>
            <groupId>io.github.mweirauch</groupId>
            <artifactId>micrometer-jvm-extras</artifactId>
            <version>0.2.2</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
            <version>3.24.3</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-smallrye-openapi</artifactId>
            <version>3.24.3</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest-client-oidc-filter</artifactId>
            <version>3.24.3</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest-client-jackson</artifactId>
            <version>3.24.3</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-logging-json</artifactId>
            <version>3.24.3</version>
        </dependency>

        <!-- avoid conflict with mutiny lib, smallrye-health-api uses 0.7.0 while 0.9.0 is also used-->
        <dependency>
            <groupId>io.smallrye.reactive</groupId>
            <artifactId>mutiny</artifactId>
            <version>2.9.2</version>

        </dependency>

        <!--  Override JNA 5.15.0 needed by vaadin, but Quarkus uses 5.8.0 -->
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.15.0</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>5.15.0</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <!--Explicitly add this because the vaadin-quarkus-extension does not load the correct version-->
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>flow-server</artifactId>
            <version>24.8.3</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <proc>full</proc>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <jvmArgs>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>generate</id>
                        <goals>
                            <goal>generate-code</goal>
                            <goal>generate-code-tests</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>development</id>
                        <goals>
                            <goal>build</goal>
                        </goals>
                        <configuration>
                            <skip>${quarkus-execution.development.skip}</skip>
                            <properties>
                                <quarkus.profile>development</quarkus.profile>
                                <quarkus.package.output-directory>quarkus-app-development</quarkus.package.output-directory>
                            </properties>
                        </configuration>
                    </execution>
                    <execution>
                        <id>preproduction</id>
                        <goals>
                            <goal>build</goal>
                        </goals>
                        <configuration>
                            <skip>${quarkus-execution.preproduction.skip}</skip>
                            <properties>
                                <quarkus.profile>preproduction</quarkus.profile>
                                <quarkus.package.output-directory>quarkus-app-preproduction</quarkus.package.output-directory>
                            </properties>
                        </configuration>
                    </execution>
                    <execution>
                        <id>production</id>
                        <goals>
                            <goal>build</goal>
                        </goals>
                        <configuration>
                            <skip>${quarkus-execution.production.skip}</skip>
                            <properties>
                                <quarkus.profile>production</quarkus.profile>
                                <quarkus.package.output-directory>quarkus-app-production</quarkus.package.output-directory>
                            </properties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-maven-plugin</artifactId>
                <version>${vaadin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-frontend</goal>
                            <goal>build-frontend</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                </executions>
                <configuration>
                    <nodeVersion>${vaadin-maven-plugin.nodeVersion}</nodeVersion>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
